--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,64 @@
 /Scripts/bingo_test.py
 /Scripts/boards.txt
 /Scripts/log.txt
+/catNames.tsv
+/enemyNames.tsv
+/api-ms-win-core-console-l1-1-0.dll
+/api-ms-win-core-datetime-l1-1-0.dll
+/api-ms-win-core-debug-l1-1-0.dll
+/api-ms-win-core-errorhandling-l1-1-0.dll
+/api-ms-win-core-fibers-l1-1-0.dll
+/api-ms-win-core-file-l1-1-0.dll
+/api-ms-win-core-file-l1-2-0.dll
+/api-ms-win-core-file-l2-1-0.dll
+/api-ms-win-core-handle-l1-1-0.dll
+/api-ms-win-core-heap-l1-1-0.dll
+/api-ms-win-core-interlocked-l1-1-0.dll
+/api-ms-win-core-libraryloader-l1-1-0.dll
+/api-ms-win-core-localization-l1-2-0.dll
+/api-ms-win-core-memory-l1-1-0.dll
+/api-ms-win-core-namedpipe-l1-1-0.dll
+/api-ms-win-core-processenvironment-l1-1-0.dll
+/api-ms-win-core-processthreads-l1-1-0.dll
+/api-ms-win-core-processthreads-l1-1-1.dll
+/api-ms-win-core-profile-l1-1-0.dll
+/api-ms-win-core-rtlsupport-l1-1-0.dll
+/api-ms-win-core-string-l1-1-0.dll
+/api-ms-win-core-synch-l1-1-0.dll
+/api-ms-win-core-synch-l1-2-0.dll
+/api-ms-win-core-sysinfo-l1-1-0.dll
+/api-ms-win-core-timezone-l1-1-0.dll
+/api-ms-win-core-util-l1-1-0.dll
+/api-ms-win-crt-conio-l1-1-0.dll
+/api-ms-win-crt-convert-l1-1-0.dll
+/api-ms-win-crt-environment-l1-1-0.dll
+/api-ms-win-crt-filesystem-l1-1-0.dll
+/api-ms-win-crt-heap-l1-1-0.dll
+/api-ms-win-crt-locale-l1-1-0.dll
+/api-ms-win-crt-math-l1-1-0.dll
+/api-ms-win-crt-process-l1-1-0.dll
+/api-ms-win-crt-runtime-l1-1-0.dll
+/api-ms-win-crt-stdio-l1-1-0.dll
+/api-ms-win-crt-string-l1-1-0.dll
+/api-ms-win-crt-time-l1-1-0.dll
+/api-ms-win-crt-utility-l1-1-0.dll
+/base_library.zip
+/calcstatstable
+/libcrypto-1_1.dll
+/libffi-8.dll
+/libssl-1_1.dll
+/python311.dll
+/tcl86t.dll
+/tk86t.dll
+/ucrtbase.dll
+/unicodedata.pyd
+/unnamed.patch
+/VCRUNTIME140.dll
+/_bz2.pyd
+/_ctypes.pyd
+/_decimal.pyd
+/_hashlib.pyd
+/_lzma.pyd
+/_socket.pyd
+/_ssl.pyd
+/_tkinter.pyd
